# snav_fci

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  SUPPLEMENTAL
api/: displacement_derivs.hpp  flight_control_interface.hpp  reference_frame.hpp  state_vector.hpp  waypoint.hpp
api/config/: landing_config.hpp  planner_config.hpp  rx_config.hpp  takeoff_config.hpp  tx_config.hpp  waypoint_config.hpp
api/tx_commands/: pwm_command.hpp  rc_command.hpp  rpm_command.hpp  thrust_att_ang_vel_command.hpp  trajectory_command.hpp  tx_command.hpp
docs/: annotated.html  basic__waypoint__example_8cpp.html  classes.html  classsnav__fci_1_1_displacement_derivs-members.html  classsnav__fci_1_1_displacement_derivs.html  classsnav__fci_1_1_flight_control_interface-members.html  classsnav__fci_1_1_flight_control_interface.html  classsnav__fci_1_1_planner_config-members.html  classsnav__fci_1_1_planner_config.html  classsnav__fci_1_1_pwm_command-members.html  classsnav__fci_1_1_pwm_command.html  classsnav__fci_1_1_rc_command-members.html  classsnav__fci_1_1_rc_command.html  classsnav__fci_1_1_rpm_command-members.html  classsnav__fci_1_1_rpm_command.html  classsnav__fci_1_1_rx_config-members.html  classsnav__fci_1_1_rx_config.html  classsnav__fci_1_1_state_vector-members.html  classsnav__fci_1_1_state_vector.html  classsnav__fci_1_1_thrust_att_ang_vel_command-members.html  classsnav__fci_1_1_thrust_att_ang_vel_command.html  classsnav__fci_1_1_trajectory_command-members.html  classsnav__fci_1_1_trajectory_command.html  classsnav__fci_1_1_tx_command-members.html  classsnav__fci_1_1_tx_command.html  classsnav__fci_1_1_tx_config-members.html  classsnav__fci_1_1_tx_config.html  classsnav__fci_1_1_waypoint-members.html  classsnav__fci_1_1_waypoint.html  classsnav__fci_1_1_waypoint_config-members.html  classsnav__fci_1_1_waypoint_config.html  classsnav__fci_1_1_yaw_config-members.html  classsnav__fci_1_1_yaw_config.html  dir_0188a3e6da905bc60aceb35bf790b8c9.html  dir_71fc0433cd739c942fd84f167c6cd9f0.html  dir_b4b3c9af9441f39c74bb9a000ec06636.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  displacement__derivs_8hpp_source.html  failure__test_8cpp.html  files.html  (+47 more)
docs/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+44 more)
examples/: basic_waypoint_example.cpp  hello_snav.cpp  multithreaded_waypoint_example.cpp  nonblocking_trajectory_example.cpp  orbit_example.cpp
imp/inc/: planner.hpp  snav_cached_data_thread_safe.hpp  snav_trajectory_thread_safe.hpp  state_info.hpp  transform.hpp  tx_command_thread_safe.hpp  waypoint_convergence.hpp
imp/src/: flight_control_interface.cpp  planner.cpp  waypoint.cpp
